	* src/dialogs/dialog-events.cpp, src/helper/action.cpp:
	  whitespace changes, typo fixes, added a few g_asserts.
	* src/selection-chemistry.cpp, src/desktop.cpp: when deleting items
	  from the desktop, the selection context may need to be cleared since
	  it may have pointers to the deleted items.  To do this, I just
	  reselect the current tool (fixes bug #983243).

2004-07-06  MenTaLguY  <mental@rydia.net>

	* src/desktop.cpp: minor tweaks to make the existing layers
	  code easier to work with in its current state (particularly,
	  to sidestep some existing bugs that otherwise require more
	  UI work to fix)

2004-07-06  Carl Hetherington  <inkscape@carlh.net>

	* src/seltrans.cpp, src/sp-namedview.cpp,
	src/display/bezier-utils.cpp, src/libnr/nr-types.cpp:
	isnan appears to need a std:: namespace qualifier.

2004-07-06  Ted Gould  <ted@gould.cx>

	* src/libnr/nr-point.h, src/libnr/nr-rect.h:

	Adding in a function to round the points and rectangles.  Using this
	for less precise comparisons.  Also, added in a function to print
	each of these.

	* src/dialogs/export.cpp:

	Major revisions to do all kinds of fun stuff.  The major one being
	that filenames and and dpi's can now be stored on selections.  This
	makes it so that people working on a section of a document can export
	it consistently.

2004-07-06  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-typeset-utils.h: Greatly reduce #includes.

	* src/color-rgba.h, src/Makefile_insert, src/desktop.h:
	  Move ColorRGBA from desktop.h to new file color-rgba.h.
	* src/desktop.cpp, src/dropper-context.cpp: #include it.

2004-07-05  Kees Cook  <kees@outflux.net>

	* src/dialogs/desktop-properties.cpp, src/dialogs/rdf.cpp,
	  src/dialogs/rdf.h: added multiline data entry items, reduced
	  overall width of the dialog, and created the license entry areas.
	  Auto-detection of license on load works now.

2004-07-05  MenTaLguY <mental@rydia.net>

	* src/desktop.cpp: comitted further work which gives us a